@startuml er_diagram
skinparam linetype ortho
skinparam shadowing false

entity "users" as users {
  * id : UUID <<PK>>
  --
  login : VARCHAR(64) <<UK>>
  email : VARCHAR(320) <<UK>>
  password_hash : TEXT
  role : user_role
  full_name : VARCHAR(128)
  bio : TEXT
  avatar_url : TEXT
  is_active : BOOLEAN
  is_email_verified : BOOLEAN
  created_at : TIMESTAMP
}

entity "regions" as regions {
  * id : UUID <<PK>>
  --
  name : VARCHAR(120) <<UK>>
}

entity "events" as events {
  * id : UUID <<PK>>
  --
  name : VARCHAR(200)
  region_id : UUID <<FK>>
  event_date : DATE
  year : INT
  description : TEXT
}

entity "maps" as maps {
  * id : UUID <<PK>>
  --
  user_id : UUID <<FK>>
  region_id : UUID <<FK>>
  event_id : UUID <<FK>>
  title : VARCHAR(255)
  coordinates : VARCHAR(255)
  year_of_event : INT
  scale_denominator : INT
  cartographer : VARCHAR(255)
  rights_holder : VARCHAR(255)
  image_key : TEXT
  source_url : TEXT
  description : TEXT
  parsed_source : VARCHAR(120)
  is_parsed : BOOLEAN
  parse_status : parse_status
  is_public : BOOLEAN
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "comments" as comments {
  * id : UUID <<PK>>
  --
  map_id : UUID <<FK>>
  user_id : UUID <<FK>>
  text : TEXT
  created_at : TIMESTAMP
}

entity "likes" as likes {
  * id : UUID <<PK>>
  --
  map_id : UUID <<FK>>
  user_id : UUID <<FK>>
  created_at : TIMESTAMP
}

users ||--o{ maps : publishes
regions ||--o{ maps : contains
events ||--o{ maps : includes
regions ||--o{ events : hosts
users ||--o{ comments : writes
maps ||--o{ comments : has
users ||--o{ likes : leaves
maps ||--o{ likes : receives
@enduml
